<resources>
    <string name="app_name">intern-18-spring</string>
    <string name="para_left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sed ornare purus. Vestibulum Vestibulu </string>
    <string name="para_right1">
        Consectetur adipiscing elit.! \n
        Vestibulum vestibulum \n
        dignissim metus!...
    </string>
    <string name="name_surname">Name Surname</string>
    <string name="time_has_left">Two minutes ago</string>
    <string name="title">Title</string>
    <string name="comment">Comments</string>
    <string name="btnHide">HIDE</string>
    <string name="btnComment">COMMENT</string>
    <string name="btnShare">SHARE</string>
    <string name="w1_view_viewgroup">W1 View and View Group</string>
    <string name="w2_activity_and_fragment">W2 Activity and Fragment</string>
    <string name="btnSend">Send</string>
    <string name="edtHint">Input something</string>
    <string name="firstFragment">First Fragment</string>
    <string name="secondFragment">Second Fragment</string>
    <string name="resource">W2 D2 Resource</string>
    <string name="edtChatHint">Type your message</string>
    <string name="sent">Sent</string>
    <string name="message_receive">Message Received</string>
    <string name="time_receive">11:53 am</string>
    <string name="w2_d2_listeners">W2 D2 Listeners</string>
    <string name="hint_user_name">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="ratio_male">Male</string>
    <string name="ratio_female">Female</string>
    <string name="switch_email_subscriptions">Email Subscriptions</string>
    <string name="switch_allow_email_from_other">Allow email from other</string>
    <string name="sw_on">ON</string>
    <string name="sw_off">OFF</string>
    <string name="w3_view_pager_list_friend">W3 View Pager List Friend</string>
    <string name="number_of_friends">Number Of Friends</string>
    <string name="unfriends">Unfriends</string>
    <string name="add_friends">Add Friends</string>
    <string name="recycler_view">W3 List Friend With Recycler View</string>
    <string name="btnSharedPreference">Shared Preference</string>
    <string name="btnStorage">Storage</string>
    <string name="btnSqlLite">SqlLite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="w4_database">W4 Database</string>
    <string name="btnSaveInternal">Save On Internal Storage </string>
    <string name="btnSaveExternal">Save On External Storage </string>
    <string name="internal">Internal</string>
    <string name="external">External</string>
    <string name="clear_success">Clear Success</string>
    <string name="clear_cancel">Nothing to clear</string>
    <string name="btnClearInternal">Clear Internal</string>
    <string name="btnClearExternal">Clear External</string>
    <string name="make_new_file">Make new file :</string>
    <string name="edtName">Input Name</string>
    <string name="edtAge">Input Age</string>
    <string name="btnInsert">Insert</string>
    <string name="options">Options</string>
    <string name="resetDatabase">Reset Database</string>
    <string name="warning_empty_name_or_age">Please filling name and age</string>
    <string name="btnDelete">Delete</string>
    <string name="id">ID</string>
    <string name="name">NAME</string>
    <string name="age">AGE</string>
    <string name="artist_name">Artist Name</string>
    <string name="search">Search</string>
    <string name="btnTrack">Track</string>
    <string name="w5_api">W5 Api</string>
    <string name="login">Login</string>
    <string name="w5_unit_test">W5 Unit Test</string>

    <!--UserName validate-->
    <string name="error_length_user_name">UserName length should be greater than 7 and
        less than 24 characters
    </string>
    <string name="error_capital_user_name">UserName must have at least 2 characters in capitalization</string>
    <string name="error_special_char_and_space_user_name">UserName does not contain special characters and spaces</string>
    <string name="error_digit_number_user_name">UserName should have at most 2 digit numbers</string>

    <!--Password validate-->
    <string name="error_difference_username_pass">Password must be difference from username</string>
    <string name="error_special_char_or_number_pass">Password should be have at least one special character or number</string>
    <string name="error_length_pass">Password minimum length is 8 characters</string>
    <string name="error_repeat_char_pass">Password must not repeat 1 character more than 2 times</string>
    <string name="error_space_pass">Password does not contain space</string>
    <string name="error_capital_pass">Password have at least 3 characters in capital</string>

    <!--Kotlin String-->
    <string name="view__and_view_group">View And View Group</string>
</resources>
