<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context="vn.asiantech.internship.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:layout_marginLeft="@dimen/spacing_huge"
        android:layout_marginRight="@dimen/spacing_huge"
        android:layout_marginTop="@dimen/spacing_normal"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnViewAndViewGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/w1_view_viewgroup" />

        <Button
            android:id="@+id/btnResource"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/resource" />

        <Button
            android:id="@+id/btnActivityAndFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/w2_activity_and_fragment" />

        <Button
            android:id="@+id/btnListener"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/w2_d2_listeners" />

        <Button
            android:id="@+id/btnListFriend"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/recycler_view" />

        <Button
            android:id="@+id/btnViewPagerListFriend"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/w3_view_pager_list_friend" />

        <Button
            android:id="@+id/btnDatabase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/w4_database" />

        <Button
            android:id="@+id/btnApi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/w5_api" />

        <Button
            android:id="@+id/btnUnitTest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/w5_unit_test" />
    </LinearLayout>
</ScrollView>
