<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtName"
        android:inputType="text" />

    <EditText
        android:id="@+id/edtAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtName"
        android:hint="@string/edtAge"
        android:inputType="number" />

    <Button
        android:id="@+id/btnInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtAge"
        android:text="@string/btnInsert" />

    <Button
        android:id="@+id/btnResetDatabase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtAge"
        android:layout_toRightOf="@id/btnInsert"
        android:text="@string/resetDatabase" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtAge"
        android:layout_toRightOf="@+id/btnResetDatabase"
        android:text="@string/btnDelete" />

    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/clColumnName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnInsert"
        android:background="@color/colorBlue">

        <TextView
            android:text="@string/id"
            android:id="@+id/tvColumn1"
            style="@style/ColumnNameStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/tvColumn2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:text="@string/name"
            android:id="@+id/tvColumn2"
            style="@style/ColumnNameStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/tvColumn3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toEndOf="@+id/tvColumn1" />

        <TextView
            android:text="@string/age"
            android:id="@+id/tvColumn3"
            style="@style/ColumnNameStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/tvColumn2" />

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewTableUser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/clColumnName" />

</RelativeLayout>
