<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/spacing_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llSend"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_chat_blue_left"
            android:text="@string/message_receive" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/bg_chat_green_right"
            android:text="@string/sent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="15">

        <EditText
            android:id="@+id/edtChat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="14"
            android:background="@drawable/bg_edt_chat"
            android:hint="@string/edtChatHint"
            android:inputType="text"
            android:padding="@dimen/spacing_tiny" />

        <ImageButton
            android:id="@+id/imgBtnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_tiny"
            android:layout_marginStart="@dimen/spacing_tiny"
            android:layout_weight="1"
            android:background="@drawable/button_circle"
            android:contentDescription="@string/btnHide"
            android:src="@drawable/ic_send_white" />

    </LinearLayout>

</RelativeLayout>
