<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.asiantech.internship.UserActivity">

    <ImageView
        android:id="@+id/imgCover"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cover_img_height"
        android:layout_marginBottom="@dimen/spacing_large"
        android:background="@color/colorBlue"
        android:contentDescription="@string/btnHide" />

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgSmallCover"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_large"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginRight="@dimen/spacing_large"
        android:background="@drawable/circle"
        android:contentDescription="@string/btnHide" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgCover"
        android:layout_toEndOf="@+id/imgAvatar"
        android:layout_toRightOf="@id/imgAvatar"
        android:text="@string/name_surname"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/font_normal"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtName"
        android:layout_toEndOf="@+id/imgAvatar"
        android:layout_toRightOf="@+id/imgAvatar"
        android:text="@string/time_has_left"
        android:textSize="@dimen/font_tiny"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/imgSmallCover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imgCover"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="@dimen/spacing_large"
        android:layout_marginRight="@dimen/spacing_large"
        android:layout_marginBottom="-25dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/btnHide" />

    <LinearLayout
        android:id="@+id/llTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgAvatar"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginRight="@dimen/spacing_large"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/font_large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/comment"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/font_normal"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llTitle"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginRight="@dimen/spacing_large"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tvParaLeft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/para_left" />

        <TextView
            android:id="@+id/tvParaRight1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/para_right1"
            android:textSize="@dimen/font_small" />

    </LinearLayout>

    <Button
        android:id="@+id/btnHide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llPara"
        android:layout_toLeftOf="@+id/btnComment"
        android:layout_toStartOf="@+id/btnComment"
        android:background="@drawable/button_white"
        android:text="@string/btnHide" />

    <Button
        android:id="@+id/btnComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llPara"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/spacing_tiny"
        android:layout_marginRight="@dimen/spacing_tiny"
        android:background="@drawable/button_blue"
        android:text="@string/btnComment"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llPara"
        android:layout_toEndOf="@+id/btnComment"
        android:layout_toRightOf="@+id/btnComment"
        android:background="@drawable/button_white"
        android:text="@string/btnShare" />

</RelativeLayout>
