<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="vn.asiantech.internship.DatabaseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnStorage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnStorage"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnSharedPreference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSharedPreference"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnSqlLite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSqlLite"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/flFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
